--- a/PFS/CSS/inscription.css
+++ b/PFS/CSS/inscription.css
@@ -15,6 +15,21 @@ body{
     justify-content: center;
     background-color: #4070f4;
 }
+.ok{
+    color: green;
+    background-color: #dff0d8;
+    border: 1px solid #d0e9c6;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.err{
+    color: red;
+    background-color: #f2dede;
+    border: 1px solid #ebccd1;
+    padding: 10px;
+    margin-bottom: 10px;
+}
 
 .container{
     position: relative;
@@ -124,14 +139,7 @@ body{
 .button input:hover{
     background-color: #265df2;
 }
-
 .form .login-signup{
     margin-top: 30px;
     text-align: center;
-}
-.ok{
-	padding:5px;
-	background-color:#0C0;
-	color:#FFF;
-	margin-top: 5px;
 }
